--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "simple-react-validator": "^1.6.2",
     "web-vitals": "^2.1.4",
     "yup": "^1.1.1"
   },
