--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "simple-react-validator": "^1.6.2",
+    "sweetalert2": "^11.7.9",
     "web-vitals": "^2.1.4",
     "yup": "^1.1.1"
   },
