--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.3",
     "simple-react-validator": "^1.6.2",
     "sweetalert2": "^11.7.10",
     "web-vitals": "^2.1.4",
